{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 518,
  "lineage": "a4178528-25cc-230d-227f-6170f0d727ca",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:il-central-1:651706742835:loadbalancer/app/nginx-alb/503df6b43cef0fde",
            "arn_suffix": "app/nginx-alb/503df6b43cef0fde",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-alb-1496397957.il-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:il-central-1:651706742835:loadbalancer/app/nginx-alb/503df6b43cef0fde",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-alb",
            "preserve_host_header": false,
            "region": "il-central-1",
            "security_groups": [
              "sg-0db71609227237603"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08978a3eaba14d772"
              },
              {
                "subnet_id": "subnet-0b4d9bdf84171e434"
              }
            ],
            "subnets": [
              "subnet-08978a3eaba14d772",
              "subnet-0b4d9bdf84171e434"
            ],
            "vpc_id": "vpc-043bab2c9764d2e4a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z09170902867EHPV2DABU"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.load_balancer.aws_security_group.ALB_sg",
            "module.networking.aws_subnet.public_alb_subnet",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:il-central-1:651706742835:listener/app/nginx-alb/503df6b43cef0fde/bbde166ed1c8befa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:il-central-1:651706742835:targetgroup/nginx-tg/eda87f4cb4330818",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:651706742835:listener/app/nginx-alb/503df6b43cef0fde/bbde166ed1c8befa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:il-central-1:651706742835:loadbalancer/app/nginx-alb/503df6b43cef0fde",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "il-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_target_group.alb_tg",
            "module.load_balancer.aws_security_group.ALB_sg",
            "module.networking.aws_subnet.public_alb_subnet",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:il-central-1:651706742835:targetgroup/nginx-tg/eda87f4cb4330818",
            "arn_suffix": "targetgroup/nginx-tg/eda87f4cb4330818",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:651706742835:targetgroup/nginx-tg/eda87f4cb4330818",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "il-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:il-central-1:651706742835:targetgroup/nginx-tg/eda87f4cb4330818-20250519132814440000000004",
            "port": 80,
            "region": "il-central-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:il-central-1:651706742835:targetgroup/nginx-tg/eda87f4cb4330818",
            "target_id": "i-0191437940f5d11c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg",
            "module.networking.aws_subnet.private_az1",
            "module.networking.aws_vpc.moveo",
            "module.nginx.aws_instance.nginx",
            "module.nginx.aws_security_group.Nginx"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group/sg-0db71609227237603",
            "description": "Allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-0db71609227237603",
            "ingress": [],
            "name": "ALB_sg",
            "name_prefix": "",
            "owner_id": "651706742835",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group-rule/sgr-0a151431f7ade77fb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0a151431f7ade77fb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "il-central-1",
            "security_group_id": "sg-0db71609227237603",
            "security_group_rule_id": "sgr-0a151431f7ade77fb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.load_balancer.aws_security_group.ALB_sg",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group-rule/sgr-066dfde5d0f395709",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-066dfde5d0f395709",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "il-central-1",
            "security_group_id": "sg-0db71609227237603",
            "security_group_rule_id": "sgr-066dfde5d0f395709",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.load_balancer.aws_security_group.ALB_sg",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03cec80660fb7faee",
            "arn": "arn:aws:ec2:il-central-1:651706742835:elastic-ip/eipalloc-03cec80660fb7faee",
            "domain": "vpc",
            "id": "eipalloc-03cec80660fb7faee",
            "network_border_group": "il-central-1",
            "public_dns": "ec2-51-84-154-105.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.154.105",
            "public_ipv4_pool": "amazon",
            "region": "il-central-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:internet-gateway/igw-049a6057b7107e638",
            "id": "igw-049a6057b7107e638",
            "owner_id": "651706742835",
            "region": "il-central-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03cec80660fb7faee",
            "association_id": "eipassoc-0220b44076ad77074",
            "connectivity_type": "public",
            "id": "nat-043a2c040713493a6",
            "network_interface_id": "eni-0cfd7f1ca5ca3a468",
            "private_ip": "10.0.3.252",
            "public_ip": "51.84.154.105",
            "region": "il-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4d9bdf84171e434",
            "tags": {
              "Name": "NAT_gw"
            },
            "tags_all": {
              "Name": "NAT_gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.elastic_ip_nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:route-table/rtb-01bbb8e901bd2611a",
            "id": "rtb-01bbb8e901bd2611a",
            "owner_id": "651706742835",
            "propagating_vgws": [],
            "region": "il-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-043a2c040713493a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.elastic_ip_nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:route-table/rtb-0253b4d72eb2fe3ef",
            "id": "rtb-0253b4d72eb2fe3ef",
            "owner_id": "651706742835",
            "propagating_vgws": [],
            "region": "il-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049a6057b7107e638",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09246d6c86d6b4fd4",
            "region": "il-central-1",
            "route_table_id": "rtb-01bbb8e901bd2611a",
            "subnet_id": "subnet-0d07c17b02bfdfb9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.elastic_ip_nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_az1",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b99dbf231820d93",
            "region": "il-central-1",
            "route_table_id": "rtb-01bbb8e901bd2611a",
            "subnet_id": "subnet-0ec4319873ac560db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.elastic_ip_nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_az2",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e21c88de5a0772a",
            "region": "il-central-1",
            "route_table_id": "rtb-0253b4d72eb2fe3ef",
            "subnet_id": "subnet-08978a3eaba14d772"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_alb_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_natc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0449714c3787cd280",
            "region": "il-central-1",
            "route_table_id": "rtb-0253b4d72eb2fe3ef",
            "subnet_id": "subnet-0b4d9bdf84171e434"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_nat_subnet",
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:subnet/subnet-0d07c17b02bfdfb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d07c17b02bfdfb9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706742835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "Private Subnet in az 1a"
            },
            "tags_all": {
              "Name": "Private Subnet in az 1a"
            },
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:subnet/subnet-0ec4319873ac560db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec4319873ac560db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706742835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "Private Subnet in az 1b"
            },
            "tags_all": {
              "Name": "Private Subnet in az 1b"
            },
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_alb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:subnet/subnet-08978a3eaba14d772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08978a3eaba14d772",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706742835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "Public Subnet for ALB"
            },
            "tags_all": {
              "Name": "Public Subnet for ALB"
            },
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_nat_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:subnet/subnet-0b4d9bdf84171e434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d9bdf84171e434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706742835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "Public Subnet for NAT"
            },
            "tags_all": {
              "Name": "Public Subnet for NAT"
            },
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "moveo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:vpc/vpc-043bab2c9764d2e4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0485a009c64a65dc0",
            "default_route_table_id": "rtb-093e98b7c0e1a3923",
            "default_security_group_id": "sg-01ec70edd48bfdc38",
            "dhcp_options_id": "dopt-0c37a6f3457d20165",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043bab2c9764d2e4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093e98b7c0e1a3923",
            "owner_id": "651706742835",
            "region": "il-central-1",
            "tags": {
              "Name": "nginx-VPC"
            },
            "tags_all": {
              "Name": "nginx-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09b5106eeaaad79ec",
            "arn": "arn:aws:ec2:il-central-1:651706742835:instance/i-0191437940f5d11c2",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0191437940f5d11c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1bb22ab72b12d18",
            "private_dns": "ip-10-0-1-43.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0895ff025db99e7f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d07c17b02bfdfb9f",
            "tags": {
              "Name": "Web-Nginx"
            },
            "tags_all": {
              "Name": "Web-Nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-019ae81a4c592a9eb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.private_az1",
            "module.networking.aws_vpc.moveo",
            "module.nginx.aws_security_group.Nginx"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group/sg-019ae81a4c592a9eb",
            "description": "security for nginx server",
            "egress": [],
            "id": "sg-019ae81a4c592a9eb",
            "ingress": [],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "651706742835",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043bab2c9764d2e4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group-rule/sgr-0d847390d4c76f2a8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0d847390d4c76f2a8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "il-central-1",
            "security_group_id": "sg-019ae81a4c592a9eb",
            "security_group_rule_id": "sgr-0d847390d4c76f2a8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo",
            "module.nginx.aws_security_group.Nginx"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_only_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group-rule/sgr-027ac7a26c7a1189e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTP inbound traffic from ALB",
            "from_port": 80,
            "id": "sgr-027ac7a26c7a1189e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0db71609227237603",
            "region": "il-central-1",
            "security_group_id": "sg-019ae81a4c592a9eb",
            "security_group_rule_id": "sgr-027ac7a26c7a1189e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.load_balancer.aws_security_group.ALB_sg",
            "module.networking.aws_vpc.moveo",
            "module.nginx.aws_security_group.Nginx"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:651706742835:security-group-rule/sgr-090d7fce940696a9e",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow SSH inbound traffic from VPC only",
            "from_port": 22,
            "id": "sgr-090d7fce940696a9e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "il-central-1",
            "security_group_id": "sg-019ae81a4c592a9eb",
            "security_group_rule_id": "sgr-090d7fce940696a9e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.moveo",
            "module.nginx.aws_security_group.Nginx"
          ]
        }
      ]
    }
  ]
}